<resources>
    <string name="app_name">Keep Notes</string>
    <string name="app_name_title">My Notes</string>
    <string name="todo">TODO</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="save_note">Save Note</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="update">Update Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_to_delete">Are you sure to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="developed_by_shahzaman">Developed by Shahzaman</string>
    <string name="speechtotext">SpeechToText</string>
</resources>