<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_update_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="16dp"
        android:paddingEnd="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/update_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nothing"
            android:background="@color/white"
            android:fontFamily="@font/futuraheavyfont"
            android:gravity="center"
            android:hint="@string/enter_title_here"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#FC323030"
            android:textSize="26sp"
             />

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/update_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Nothing"
        android:background="@color/white"
        android:fontFamily="@font/futuramediumbt"
        android:gravity="center_horizontal"
        android:hint="@string/enter_text_here"
        android:inputType="textMultiLine"
        android:maxLines="100"
        android:minLines="5"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textColor="#353535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_update_activity">

    </EditText>

    <Button
        android:id="@+id/Update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/futuramediumbt"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
