<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_view_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/view_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:contentDescription="@string/update"
                app:layout_constraintBottom_toTopOf="@+id/view_activity_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar_view_activity"
                app:srcCompat="@drawable/update" />


            <TextView
                android:id="@+id/view_activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/futuraheavyfont"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/title"
                android:textColor="@color/blue"
                android:textIsSelectable="true"
                android:textSize="26sp"
               />


        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/view_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:autofillHints="Nothing"
            android:background="@color/white"
            android:fontFamily="@font/futuramediumbt"
            android:gravity="center_horizontal"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="16dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            android:text="@string/body"
            android:textSize="18sp"
            android:textColor="#353535"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_view_activity" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>